[package]
name = "hyperzoom"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.31"
cpal = "0.15.3"
ringbuf = "0.4"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
opus = "0.3"
igd-next = { version = "0.16", features = ["aio_tokio"] }
fdk-aac = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
dirs = "6"
vpx-encode = "0.6"
env-libvpx-sys = { version = "5.1", features = ["generate"] }
fast_image_resize = "5"

[target.'cfg(target_os = "macos")'.dependencies]
mach2 = "0.6"
libc = "0.2"
nokhwa = { version = "0.10", features = ["input-avfoundation"] }

